apps/base/ntfy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  labels:
    app: ntfy
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      containers:
        - name: ntfy 
          image: binwiederhier/ntfy:v1.28.0 # set deployed version
          args: ["serve"]
          env:  #example of adjustments made in environmental variables
            - name: TZ # set timezone
              value: Europe/London
            - name: NTFY_DEBUG # enable/disable debug
              value: "false"
            - name: NTFY_LOG_LEVEL # adjust log level
              value: INFO
            - name: NTFY_BASE_URL # add base url
              value: https://ntfy.f9.casa 
          ports: 
            - containerPort: 80
              name: http-ntfy
          resources:
            limits:
              memory: 300Mi
              cpu:  200m
            requests:
                  cpu: 150m
                  memory: 150Mi
          # volumeMounts:
          #     - mountPath: /etc/ntfy/server.yml
          #       subPath: server.yml
          #       name: config-volume # generated vie configMapGenerator from kustomization file
          # volumes:
          #     - name: config-volume
          #       configMap:  # uses configmap generator to parse server.yml to configmap
          #         name: server-config
