apps/base/ntfy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ntfy
  name: ntfy
  namespace: ntfy 
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.10.203
  ports:
    - name: smtp-ntfy-out
      port: 25
      targetPort: 25
    - name: http-ntfy-out
      protocol: TCP
      port: 80
      targetPort: http-ntfy
  selector:
    app: ntfy
