apps/base/ntfy/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy
  namespace: ntfy
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ntfy.f9.casa`)
      kind: Rule
      services:
        - name: ntfy
          port: 80
      middlewares:
        - name: default-headers
          namespace: default
